--- a/_sass/6-layouts/_site-main.scss
+++ b/_sass/6-layouts/_site-main.scss
@@ -30,7 +30,7 @@
 
 @media (max-width: settings-breakpoints.$bp-md) {
   .l-site-main {
-    padding-block: settings-spacing.$space-5;
+    padding-block: settings-spacing.$space-4;
   }
 }
 
